2006-05-01  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSMatrix..m: ([performKeyEquivalent:]) Check modifier flags
	of cells when determining whether to perform their key equivalents.
	* Source/NSMenu.m: ([performKeyEquivalent:]) Use key equivalent
	modifier mask as suggested by Fred, rather than original hard-coded
	command modifier.

2006-04-30  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSMenu.m: ([performKeyEquivalent:]) Ignore key eqivalents other
	than carriage return if the command key is not pressed.

2006-04-30  David Ayers  <d.ayers@inode.at>

	* ColorPickers/GSNamedColorPicker.m ([-browser:selectRow:inColumn:]):
	Return NO as default value.
	
2006-04-29  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSWindow.m: ([-performKeyEquivalent:]) revert last change as
	it broke things because I accidentally faileds to commit corresponding
	NSMenu fix, and because I'm not sure it should be doing it anyway.

2006-04-28  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSApplication.m: ([-sendEvent:]) try key equivalents for
	every key down, not just command modifiers ... consistent with
	MacOS-X and allows carriage return as a button/menu key.
	* Source/NSWindow.m: ([-performKeyEquivalent:]) only pass on to
	our views if this is the key window (NSMenu overrides this).

2006-04-27  Sergii Stoian <stoyan255@yahoo.com>

	* Source/NSMenuView.m (-rectOfItemAtIndex:): Delete origin.x fiddling 
	code because it's not correct. The code wich draws heavy line have to
	update _leftBorderOffset instead.
	(-drawRect:): Always draw dark gray upper and left border.
	
2006-04-24  Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSDocumentController.m (-makeUntitledDocumentOfType:):
	Set the type of the new document. Patch by Saso Kiselkov
	<diablos@manga.sk>. 

2006-04-19  Adam Fedor  <fedor@gnu.org>

	* configure: Add arg to disable aspell (for use on Mac OS X).
	
	* Source/NSBitmapImageRep+JPEG.m: Add workaround so that INT32